<resources>
    <string name="app_name">InstaFX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Required">Required</string>
    <string name="Response">Message</string>
    <string name="ok">Ok</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirmandwithdraw">Confirm &amp; Withdraw</string>
    <string name="welcometoexchange">Welcome to InstaFX</string>
    <string name="buyyourfirstcrypto">Buy your first cryptocurrency today</string>
    <string name="coin">COINS</string>
    <string name="ruppeinr">Fund</string>
    <string name="hide_zeorbalance">Hide Zero Balances</string>
    <string name="converttowrx">Convert To InstaFX</string>
    <string name="please_pay_attention">PLEASE PAY ATTENTION! THE COIN YOU SELECTED IS:</string>
    <string name="cash_deposit_not_allowed">Kindly note cash deposit services is not available at this moment. Please use net banking for the deposits. </string>
    <string name="passwordrule">Please, use atleast 1 uppercase, 1 lowercase , 1 special character, 1 numeric &amp; atleast upto 8 characters</string>
    <string-array name="orderType">
        <item>Market</item>
        <item>Limit</item>
    </string-array>
    <string name="entervalidemail">Enter valid Email.</string>
    <string name="invalidOtp">Entered OTP is invalid</string>
    <string name="Invalid">Invalid</string>
    <string name="enter_otp">OTP</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_old_password">Enter old Password</string>
    <string name="enter_conf_password">Enter Confirm Password</string>
    <string name="password_invalid">Confirm Password does not matched</string>
    <string name="converttowrx_text">Convert To WRX</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="recover_password">Recover Password</string>
    <string name="loin_txt">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enteryouremail">Please enter your registered email</string>
    <string name="commission">Commission</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Please enter your new password</string>
    <string name="confirm">Confirm Password</string>
    <string name="public_key">Public Key</string>
    <string name="secret_key">Secret Key</string>
    <string name="get_keys">Get Keys</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_txt">Register</string>
    <string name="signup_txt">Signup</string>
    <string name="withdraw_inr">Withdraw INR</string>
    <string name="confirm_withdraw_txt">Confirm BTC Withdraw</string>
    <string name="withdraw_txt">Withdraw Bitcoin</string>
    <string name="destination_address_txt">Destination Address</string>
    <string name="amount_txt">BTC Amount</string>
    <string name="withdrawal_fee_txt">Withdrawal Fee</string>
    <string name="final_amount_txt">Final Amount(You will get)</string>
    <string name="remarks_txt">Remarks</string>
    <string name="proceed_txt">Proceed</string>
    <string name="confirm_txt">Confirm</string>
    <string name="confirm_your_identity">Confirm Your Identity</string>
    <string name="upload_a_photo_scan_of_">Upload a Photo or Scan of your National ID</string>
    <string name="upload_a_photo_scan_of_address_"> Upload a Photo or Scan of your Address Proof</string>
    <string name="request_submitted">Request Submitted</string>
    <string name="submit_withdraw_req_">Submit withdraw request</string>
    <string name="dont_recieve_otp">Don`t receive OTP</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="verification">Verification</string>
    <string name="verify_captcha">Verify captcha</string>
    <string name="google_recaptch">Google Recaptcha</string>
    <string name="pleas_cros">Please cross-check the destination address. withdrawals to Smart Contract Addresses, payments or participation in ICOs/Airdraps are not supported and will be lost forever. Withdrawal requests cannot be cancelled after submission.</string>
    <string name="please_depo">Please deposit only BTC to this address. If you deposit any other coins, it will be lost forever.</string>
    <string name="stacking">Staking</string>
    <string name="automatic_cgb_staking">Automatic CGB Staking</string>
    <string name="sr_no">SR.NO</string>
    <string name="staked_for">Staked For</string>
    <string name="cgb_staking">CGB Staking</string>
    <string name="staked_coin">Staked Coins</string>
    <string name="cgb_stake">Stake CGB</string>
    <string name="veriry_acco">Verify Account</string>
    <string name="security">Security</string>
    <string name="welcome_txt">Welcome</string>
    <string name="select_category">Select Type</string>
    <string name="country_warning">Select the country field.</string>
    <string name="firstname_warning">Enter The First Name.</string>
    <string name="lastname_warning">Enter The Last Name.</string>
    <string name="email_warning">Enter The Email.</string>
    <string name="dob_warning">Enter The Date Of Birth(DD-MM-YYYY).</string>
    <string name="address_warning">Enter The Address.</string>
    <string name="state_warning">Select The State.</string>
    <string name="city_warning">Enter The City.</string>
    <string name="pincode_warning">Enter The Pin Code.</string>
    <string name="pan_number_warning">Enter The PAN Number.</string>
    <string name="pan_number_match_warning">PAN Number must be match.</string>
    <string name="pan_image_warning">Select PAN Image.</string>
    <string name="adhar_number_warning">Enter Aadhaar Number.</string>
    <string name="adhar_number_match_warning">Aadhaar Number must be match.</string>
    <string name="adhar_front_image_warning">Select Aadhaar Front Image.</string>
    <string name="adhar_back_image_warning">Select Aadhaar Back Image.</string>
    <string name="national_id_front_image_warning">Select National ID Front Image.</string>
    <string name="national_id_back_image_warning">Select National ID Back Image.</string>
    <string name="address_front_image_warning">Select Address Front Image.</string>
    <string name="address_back_image_warning">Select Address Back Image.</string>
    <string name="total_worth">Total Worth </string>
    <string name="account_holder_name_">Account Holder Name: </string>
    <string name="total_cgb_stake">Total CGB Staked </string>
    <string name="total_inr_worth">Total INR Worth </string>
    <string name="monthly_interest">Monthly Interest</string>
    <string name="total_inr_">Total INR Worth</string>
    <string name="total_profit_">Total Profit</string>
    <string name="staking_days_">Staking Days</string>
    <string name="account_hoder_name_warning">Enter Account Holder Name.</string>
    <string name="bank_name_warning">Enter Bank Name.</string>
    <string name="branch_name_warning">Enter Bank Branch Name.</string>
    <string name="account_number_warning">Enter Account Number.</string>
    <string name="ifsc_code_warning">Enter IFSC Code.</string>
    <string name="account_number_match_warning">Account Number must be match.</string>
    <string name="selfie_image_warning">Select Selfie Image.</string>
    <string name="passbook_image_warning">Select Passbook Image.</string>
    <string name="required">Required</string>
    <string name="select_any_two">Select any two </string>
    <string name="select_any_one">Select any one </string>
    <string name="select_your">Select Your Country</string>
    <string name="search_country">Search Country</string>
    <string name="country">Country</string>
    <string name="select_coun">Select country</string>
    <string name="type">Type *</string>
    <string name="personal">personal</string>
    <string name="personal_in">Personal Info</string>
    <string name="first_name_">First Name *</string>
    <string name="middle_name">Middle Name</string>
    <string name="date_of_bir">Date of birth (DD-MM-YYYY) *</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="address_">Address *</string>
    <string name="address">Address</string>
    <string name="enter_last_">Enter last name</string>
    <string name="enter_city_">Enter City</string>
    <string name="state_">State *</string>
    <string name="select_stat">Select state</string>
    <string name="city_">City *</string>
    <string name="select_city">Select city</string>
    <string name="pin_zip_cod">Pin/Zip Code *</string>
    <string name="enter_code">Enter code</string>
    <string name="pan_details">Pan Details</string>
    <string name="pan_card">Pan Card</string>
    <string name="pan_number_">Pan Number *</string>
    <string name="enter_pan_n">Enter pan number</string>
    <string name="re_enter_pa">Re-Enter Pan Number *</string>
    <string name="upload_pan_">Upload Pan Card</string>
    <string name="on_desktop_">On desktop, simple and drop your file in this field. Acceptable formats:JPEG or PNG</string>
    <string name="document_ty">Document Type</string>
    <string name="document">Document</string>
    <string name="aadhaar">Aadhaar</string>
    <string name="national_id_back">Nation Id Proof(Back)</string>
    <string name="national_id_front">Nation Id Proof(Front)</string>
    <string name="national_id">National ID</string>
    <string name="aadhaar_num">Aadhaar Number*</string>
    <string name="enter_aadha">Enter Aadhaar number</string>
    <string name="re_enter_aa">Re-Enter Aadhaar Number *</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="account_hol">Account Holder\'s Name</string>
    <string name="account_num">Account Number</string>
    <string name="logout">Logout</string>
    <string name="iban_number">IBAN number</string>
    <string name="bank_branch">Branch Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="english">English</string>
    <string name="turkish">Türkçe</string>
    <string name="arabic">Arabic</string>
    <string name="chinese_traditional">Chinese (Traditional)</string>
    <string name="chinese_contonese">Chinese (Contonese)</string>
    <string name="persian">Persian</string>
    <string name="languagesetting">Language </string>
    <string name="personal_details">Personal Details</string>
    <string name="nationality">Nationality</string>
    <string name="marital_status">Marital status</string>
    <string name="married">Married</string>
    <string name="un_married">Un-married</string>
    <string name="address_details">Address Details</string>
    <string name="residence_address">Residence Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
</resources>