<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/app_bg_color"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_header_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/header_bar_color"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="@color/white" />

        <fontspackageForTextView.Regular
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languagesetting"
            android:textColor="@color/white"
            android:textSize="@dimen/action_bar_title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <fontspackageForTextView.BoldMedium
        android:id="@+id/lable_language"
        android:layout_below="@+id/ll_toolbar"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_marginLeft="5dp"
        android:text="@string/languagesetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center|left"
        style="@style/edittext_style_14_black"
        ></fontspackageForTextView.BoldMedium>

    <LinearLayout
        android:id="@+id/language_section"
        android:layout_below="@+id/lable_language"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_drawable"
        >
        <RadioButton
            android:id="@+id/radio_english"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/english"
            ></RadioButton>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line_color"></View>

        <RadioButton
            android:id="@+id/radio_turkish"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/turkish"
            ></RadioButton>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line_color"></View>

        <RadioButton
            android:id="@+id/radio_arabic"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/arabic"
            ></RadioButton>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line_color"></View>

        <RadioButton
            android:id="@+id/radio_chinese_traditinal"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/chinese_traditional"
            ></RadioButton>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line_color"></View>

        <RadioButton
            android:id="@+id/radio_chinese_contonese"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/chinese_contonese"
            ></RadioButton>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/line_color"></View>

        <RadioButton
            android:id="@+id/radio_persian"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/persian"
            ></RadioButton>



    </LinearLayout>


    <fontspackageForTextView.BoldMedium
        android:background="@drawable/white_drawable"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:id="@+id/tv_logout"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:gravity="center"
        style="@style/edittext_style_14_black"
        ></fontspackageForTextView.BoldMedium>

</LinearLayout>