<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_20"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_back"
        android:padding="10dp"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:src="@drawable/arrow"
        android:layout_centerVertical="true"
        android:paddingLeft="10dp">
    </ImageView>


    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <fontspackageForTextView.BoldMedium
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textColor="@color/dark_blue"
            android:textSize="22dp"
            android:gravity="center"
            ></fontspackageForTextView.BoldMedium>


        <fontspackageForTextView.Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <!--      //dlNpTUkrT3lWSXZoSVBFY052N0RNd2Q5RG9EcGpMMjRCQnFETHNVTmxKcz0=-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <fontpackageforEdittext.Regular
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_drawable"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="30dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_dark"
                android:textSize="14dp"></fontpackageforEdittext.Regular>


        </RelativeLayout>

        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_lastname"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>



        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_nationality"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/nationality"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>


        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marital_status"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
                <RadioButton
                    android:id="@+id/rd_married"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/married"
                    ></RadioButton>


            <RadioButton
                android:id="@+id/rd_unmarried"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/un_married"
                ></RadioButton>

        </LinearLayout>



        <fontspackageForTextView.BoldMedium
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_details"
            android:textColor="@color/dark_blue"
            android:textSize="22dp"
            android:gravity="center"
            ></fontspackageForTextView.BoldMedium>




        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_residence_address"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/residence_address"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>


        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_city"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/city"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>


        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_state"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/state"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>



        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_postalcode"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/postal_code"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>




        <fontspackageForTextView.BoldMedium
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bank Details"
            android:textColor="@color/dark_blue"
            android:textSize="22dp"
            android:gravity="center"
            ></fontspackageForTextView.BoldMedium>





        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_bank_name"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/bank_name"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>




        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_hol"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_account_holder_name"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/account_hol"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>




        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_num"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_account_number"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/account_num"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>



        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_branch"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_branch_number"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/bank_branch"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>



        <fontspackageForTextView.Regular
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iban_number"
            android:textColor="@color/grey_dark"
            android:textSize="12dp"
            ></fontspackageForTextView.Regular>

        <fontpackageforEdittext.Regular
            android:id="@+id/txt_iban_number"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_drawable"
            android:hint="@string/iban_number"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColorHint="@color/grey_dark"
            android:textColor="@color/black"
            android:textSize="14dp"
            ></fontpackageforEdittext.Regular>


        <TextView
            android:layout_marginBottom="20dp"
            android:id="@+id/login_btn"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="45dp"
            android:layout_width="match_parent"
            android:background="@drawable/orrange_drawable"
            ></TextView>


    </LinearLayout>

    </ScrollView>


</LinearLayout>